--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   }
   
   h1 {
-    font-size: 2em;
+    font-size: 1em;
   }
   
   .input-container {
@@ -18,9 +18,11 @@ body {
     align-items: center;
     justify-content: center;
     gap: 10px;
+    flex-flow: column;
   }
   
   #name {
+    width: 250px;
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #ccc;
@@ -40,6 +42,7 @@ body {
   }
 
   #email {
+    width: 250px;
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #ccc;
@@ -59,6 +62,7 @@ body {
   }
   
   #submitButton {
+    width: 295px;
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #1d86dd;
@@ -105,7 +109,7 @@ body {
   .loading-bar {
     width: 100%;
     height: 5px;
-    background-color: #f32121;
+    background-color: #2196f3;
     animation: loading 3s linear;
     animation-fill-mode: forwards;
     border-radius: 5px;
@@ -130,11 +134,11 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%; /* Make the navbar full width */
+    width: 100%;
   }
   
   .brand-name {
     font-size: 2em;
     font-weight: bold;
-    color: #2196f3; /* Adjust the brand name color as desired */
+    color: #2196f3;
   }
