--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   }
   
   h1 {
-    font-size: 1em;
+    font-size: 2em;
   }
   
   .input-container {
@@ -21,8 +21,7 @@ body {
     flex-flow: column;
   }
   
-  #name {
-    width: 250px;
+  #userNumber {
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #ccc;
@@ -31,18 +30,18 @@ body {
     transition: 500ms;
     -webkit-user-scalable: none;
     touch-action: manipulation;
+    width: 250px;
   }
 
-  #name:hover {
+  #userNumber:hover {
     border-color: #acacac;
   }
 
-  #name:focus {
+  #userNumber:focus {
     border-color: #767676;
   }
 
-  #email {
-    width: 250px;
+  #userNumbers {
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #ccc;
@@ -51,18 +50,18 @@ body {
     transition: 500ms;
     -webkit-user-scalable: none;
     touch-action: manipulation;
+    width: 250px;
   }
 
-  #email:hover {
+  #userNumbers:hover {
     border-color: #acacac;
   }
 
-  #email:focus {
+  #userNumbers:focus {
     border-color: #767676;
   }
   
-  #submitButton {
-    width: 295px;
+  #guessButton {
     font-family: sans-serif;
     padding: 10px 20px;
     border: 2px solid #1d86dd;
@@ -123,7 +122,7 @@ body {
       width: 100%;
     }
   }
-  
+
   .navbar {
     display: flex;
     align-items: center;
@@ -142,3 +141,4 @@ body {
     font-weight: bold;
     color: #2196f3;
   }
+  
